# Kogar

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
docs/: Hoja_ruta.md  TAREAS.md  workflow_manager_api.md
examples/: full_month_simulation.py
migrations/: env.py
migrations/versions/: 0c58b8e323b8_create_households_and_members_tables.py  a1b2c3d4e5f6_replace_year_month_with_period_dates.py  cc90477bede4_create_perior_agreed_contributions.py  d8558a6ed736_add_debt_entries_table.py  da8430e8a4bf_add_income_entries_table.py  e2abf4cbdcb8_add_expenses_table.py  fb7edb359f8b_create_household_periods_table.py  fcf1ba762222_add_expense_participants_table.py
src/: config.py
src/models/: __init__.py  bucket_entry.py  bucket_tracker.py  budget.py  budget_category.py  calculadora.py  calculator.py  category.py  category_library.py  constants.py  debt_account.py  debt_entry.py  debt_tracker.py  expense.py  expense_tracker.py  finance_calculator.py  (+13 more)
tests/: helpers.py  test_bucket_entry.py  test_bucket_tracker.py  test_budget.py  test_budget_category.py  test_calculator.py  test_category_library.py  test_constants.py  test_debt_account.py  test_debt_entry.py  test_debt_tracker.py  test_expense.py  test_expense_repository.py  test_expense_tracker.py  test_household.py  test_incomes_entries_service.py  test_member.py  test_participante.py  test_repositories.py  test_saving_account.py  test_saving_bucket.py  test_saving_entry.py  test_saving_tracker.py  test_text.py  test_utils_currency.py  test_workflow_manager.py  test_workflow_persistence.py
(+18 files in other folders)
