[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kogar"
version = "0.1.0"
description = "Gestión de finanzas compartidas"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "coverage==7.13.3",
    "ruff>=0.4.0",
    "colorama==0.4.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.coverage.run]
omit = [
    "src/utils/printer.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html:coverage"
python_files = "test_*.py"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # E/W = pycodestyle, F = pyflakes, I = isort
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"